--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -43,7 +43,7 @@ These datasets are updated frequently. This analysis is based on data downloaded
 
 To explore the relationship between excess deaths, deaths attributed to COVID-19, and excess deaths that were not attributed to COVID-19, we generated time series plots for these quanities for the entire nation. 
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 
 panel1=merged_data %>% 
   filter(state=="United States") %>% 
@@ -91,4 +91,88 @@ panel3=
 panel2 + panel1 + panel3
    
 ```
+This code chunk calculates the number of excess deaths, covid deaths, and excess non-covid deaths in the United States from February through October 2020.
+
+```{r}
+merged_data %>% 
+  filter(state=="United States" & end_week < as.Date("2020-11-1")) %>% 
+  summarise(
+    excess_deaths=sum(excess_higher_estimate),
+    covid_deaths=sum(covid_19_deaths),
+    excess_not_covid=sum(excess_higher_estimate)-sum(covid_19_deaths))
+```
+Approximately 1/3 of excess deaths were not attributed to COVID.
+
+
+Next I was interested in getting a sense of whether the rate of excess non-covid deaths varied across States.
+
+In the next code chunk I aggregate the data by state over the entire period, merge the data with another data set containing state level population estimates for 2020. 
+
+```{r}
+states= merged_data %>% 
+  group_by(state) %>% 
+  filter(end_week < as.Date("2020-11-1") & state !="United States" & state!="New York City") %>% 
+  filter(!is.na(covid_19_deaths)) %>% 
+  filter(!is.na(excess_higher_estimate)) %>% 
+  summarise(
+    excess_deaths=sum(excess_higher_estimate),
+    covid_deaths=sum(covid_19_deaths),
+    excess_not_covid=sum(excess_higher_estimate)-sum(covid_19_deaths)) 
+
+state_pop <- read_csv("data/State_Populations.csv") %>% 
+  clean_names()
+
+states=right_join(states,state_pop) %>% 
+  mutate(excess_death_r=excess_deaths/population*100000) %>% 
+  mutate(covid_death_r=covid_deaths/population*100000) %>% 
+  mutate(excess_not_covid_r=excess_not_covid/population*100000)
+
+
+```
+
+
+```{r}
+
+panel1 = states %>% 
+ ggplot( aes(x=covid_death_r,y=excess_not_covid_r, size=population))+
+   labs(x = "COVID-19 deaths \n per 100,000 residents", y = "Excess non-COVID-19 deaths \n per 100,000 residents") +
+   geom_point(alpha=0.5)+
+  geom_smooth(weight="population")+
+  theme(legend.position = "none") +
+  scale_y_continuous(limits=c(0, 300))
+
+
+panel2 = states %>% 
+ ggplot( aes(x=covid_death_r,y=excess_death_r, size=population))+
+   labs(x = "COVID-19 deaths \n per 100,000 residents", y = "Excess non-COVID-19 deaths \n per 100,000 residents") +
+   geom_point(alpha=0.5)+
+  geom_smooth(, weight="population")+
+ theme(legend.position = "none") +
+  scale_y_continuous(limits=c(0, 300))
+
+panel2 + panel1
+```
+
+Next we explore whether the duration of stay at home orders are associated with excess non-covid related mortality. 
+
+```{r}
+stay_at_home_orders <- read_csv("data/stay_at_home_orders_final.csv", 
+    col_types = cols(Start = col_date(format = "%m/%d/%Y"), 
+        End = col_date(format = "%m/%d/%Y"))) %>% 
+  clean_names() %>% 
+  mutate(stay_at_home=if_else(length==0,FALSE,TRUE))
+
+states=right_join(states,stay_at_home_orders)
+
+states %>% 
+ ggplot( aes(x=length,y=excess_not_covid_r, size=population))+
+   labs(x = "Length of stay-at-home order (days)", y = "Excess non-COVID-19 deaths \n per 100,000 residents") +
+   geom_point(alpha=0.5)+
+  geom_smooth(, weight="population")+
+ theme(legend.position = "none") +
+  scale_y_continuous(limits=c(0, 100))
+
+```
+
+
 
