Home page change

--- a/about.Rmd
+++ b/about.Rmd
@@ -9,7 +9,7 @@ output:
 <br>
 
 ### **Motivation**
-According to [Driver knowledge](https://www.driverknowledge.com/car-accident-statistics/#:~:targetText=U.S.%20every%20year%20is%206,experience%20permanent%20injuries%20every%20year.), there are around 6 million car accidents in the U.S every year on average, more than 90 people die in accidents everyday. The severity of car accidents raised our attention to find factors impacting number of car accidents. Through this report, we try to explore the association between accident number and weather, time of the day, holidays, number of borken street lights or traffic lights and number of restaurants in a certain area. We hope anyone who view our website will retrieve some useful information, in the meanwhile, raise security awareness.
+Since the start of COVID-19, a range of conspiracy theories have spun up in the United States about the scope and severity of the pandemic. The [President](https://apnews.com/article/virus-outbreak-donald-trump-ap-fact-check-anthony-fauci-flu-fe474f0c15f76adf324791a2cfc1e2bb) of the United States has repeatedly compared coronavirus to the flu, claiming that the lethality of the two diseases are comparable. These words are the reflection a larger population's attitude on 
 
 <br>
 
